<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_10"
    android:theme="@style/AppTheme.Material">

    <View
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:backgroundTintMode="screen"
        android:backgroundTint="@color/colorPrimary"
        android:background="@drawable/bg_bright" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/spacing_mlarge"
        android:paddingBottom="@dimen/spacing_xxxlarge"
        android:paddingHorizontal="@dimen/spacing_mlarge">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/spacing_middle"
            android:layout_marginTop="@dimen/spacing_xxlarge"
            android:text="@string/welcome"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/spacing_xlarge"
            android:text="@string/description"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/white" />

        <androidx.cardview.widget.CardView
            android:id="@+id/form_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/spacing_middle"
            android:visibility="visible"
            app:cardCornerRadius="6dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_mlarge">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/spacing_mlarge"
                    android:src="@drawable/img_avatar"
                    app:civ_border_width="2dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/type_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mlarge" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/palindrome"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/type_text_palindrome">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mlarge" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/next"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:layout_weight="4"
                        android:background="@drawable/btn_rounded_primary"
                        android:text="@string/next"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:paddingLeft="@dimen/spacing_middle"
                        android:paddingRight="@dimen/spacing_middle" />

                    <View
                        android:layout_width="@dimen/spacing_small"
                        android:layout_height="0dp" />

                    <Button
                        android:id="@+id/check"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:layout_weight="2"
                        android:background="@drawable/btn_rounded_primary"
                        android:text="@string/check"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:paddingLeft="@dimen/spacing_middle"
                        android:paddingRight="@dimen/spacing_middle" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:text="@string/copyright"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_600"/>

    </RelativeLayout>

</RelativeLayout>
