<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/AppTheme.Material">

    <View
        android:id="@+id/bright"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/bg_bright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/spacing_mlarge"
        android:paddingTop="@dimen/spacing_mlarge"
        android:paddingBottom="@dimen/spacing_xxxlarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_middle"
            android:layout_marginTop="@dimen/spacing_xxlarge"
            android:layout_marginBottom="@dimen/spacing_middle"
            android:text="@string/hallo"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/grey_700"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome"
            android:layout_marginHorizontal="@dimen/spacing_middle"
            android:layout_marginBottom="@dimen/spacing_xlarge"
            android:text="@string/app_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearlayout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="-24dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bright">

        <Button
            android:id="@+id/choose_event"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xxxlarge"
            android:layout_marginBottom="@dimen/spacing_large"
            android:background="@drawable/btn_rounded_primary"
            android:text="@string/choose_event"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/choose_guest"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xxxlarge"
            android:background="@drawable/btn_rounded_primary"
            android:text="@string/choose_guest"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/suitmedia"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="-100dp"
        android:contentDescription="@string/dashboard"
        android:paddingHorizontal="@dimen/spacing_xxxlarge"
        android:src="@drawable/img_suitmedia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout_button" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="-100dp"
        android:contentDescription="@string/dashboard"
        android:src="@drawable/img_bg_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suitmedia" />

</androidx.constraintlayout.widget.ConstraintLayout>
